--- a/style.css
+++ b/style.css
@@ -1,26 +1,37 @@
-
-.carteimage{
-    width: 300px;
-    height: 150px;
+.restaurants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.backgroundpicture{
-    width: 300px;
-    height: 150px;
+.restaurantcartes {
+  width: 450px;
+  height: 450px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: aqua;
+  border: 4px solid black;
+  margin-bottom: 50px;
+  -webkit-transform: scale();
+          transform: scale();
+  -webkit-transition-duration: 400ms;
+          transition-duration: 400ms;
+}
+.restaurantcartes:hover {
+  background-color: #00cccc;
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
 }
 
-.restaurantcartes{
-    background-color: aqua;
-    border: 4px solid black;
-    margin-bottom: 50px;
-    transform:scale(1);
-    transition-property: transform;
-    transition-duration: 500ms;
-}
-
-.restaurantcartes :hover{
-    transform: scale(1.1);
-}
-.container {
-  background-color: rgb(237, 246, 247);
-}
+.carteimage {
+  width: 300px;
+  height: 300px;
+}/*# sourceMappingURL=style.css.map */
