--- a/style.css
+++ b/style.css
@@ -1,26 +1,108 @@
-
-.carteimage{
-    width: 300px;
-    height: 150px;
+/* Variables*/
+/* colors */
+/* colors */
+/* police */
+@font-face {
+  font-family: Shrikhand;
+  src: url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+}
+/* police */
+/* mixin */
+/* mixin */
+/* styleheader*/
+.header {
+  text-align: center;
 }
 
-.backgroundpicture{
-    width: 300px;
-    height: 150px;
+.logo {
+  font-family: Shrikhand;
 }
 
-.restaurantcartes{
-    background-color: aqua;
-    border: 4px solid black;
-    margin-bottom: 50px;
-    transform:scale(1);
-    transition-property: transform;
-    transition-duration: 500ms;
+/* styleheader*/
+/* style main*/
+.localisation {
+  text-align: center;
+}
+.localisation span {
+  margin-left: 10px;
 }
 
-.restaurantcartes :hover{
-    transform: scale(1.1);
+.explore {
+  display: flex;
+  flex-direction: column;
 }
-.container {
-  background-color: rgb(237, 246, 247);
+.explore .exploretitle {
+  text-align: center;
 }
+.explore .exploretext {
+  text-align: center;
+}
+.explore .button {
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+}
+
+.fonctionnementcarte {
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+}
+
+.carteimage {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.backgroundpicture {
+  width: 100%;
+  height: 150px;
+}
+
+.restaurantcartes {
+  height: 256px;
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  border: 4px solid black;
+  margin-bottom: 50px;
+  transform: scale(1);
+  transition-property: transform;
+  transition-duration: 500ms;
+}
+.restaurantcartes:hover {
+  transform: scale(1.1);
+}
+
+.restaurantlegend {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  background-color: #99E2D0;
+  padding: 10px 15px 5px 15px;
+  border: 1px solid grey;
+}
+
+.foodcard {
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+}
+
+/* stylemain*/
+/* stylefooter*/
+.footer {
+  background-color: black;
+  color: white;
+}
+.footerh3 {
+  font-family: Shrikhand;
+}
+.footer ul {
+  list-style: none;
+}
+.footer li {
+  margin-bottom: 5px;
+}
+
+/* stylefooter*//*# sourceMappingURL=style.css.map */
