--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
 
 .localisation {
   text-align: center;
+  background-color: #f3f3f3;
+  padding: 0.75rem 1.5rem;
 }
 .localisation span {
   margin-left: 10px;
@@ -38,6 +40,8 @@ body {
 .explore {
   display: flex;
   flex-direction: column;
+  background-color: #f6f6f6;
+  padding: 0.75rem 1.5rem;
 }
 .explore .exploretitle {
   text-align: center;
@@ -45,14 +49,26 @@ body {
 .explore .exploretext {
   text-align: center;
 }
-.explore .button {
+.explore .explorebutton {
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: white;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  width: 300px;
 }
 
 .fonctionnementcarte {
+  background-color: #f6f6f6;
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  padding: 0.75rem 1.5rem;
+  margin-bottom: 20px;
+}
+.fonctionnementcarte .fonctionnementtexte {
+  margin-left: 32px;
 }
 
 .carteimage {
@@ -66,7 +82,13 @@ body {
 
 .backgroundpicture {
   width: 100%;
-  height: 150px;
+  max-height: 512px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.restaurant .restaurantitle {
+  font-family: roboto;
 }
 
 .restaurantcartes {
@@ -80,7 +102,7 @@ body {
   transition-duration: 500ms;
 }
 .restaurantcartes:hover {
-  transform: scale(1.1);
+  transform: scale(1.03);
 }
 
 .restaurantlegend {
@@ -95,6 +117,27 @@ body {
 .foodcard {
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  background-color: white;
+  display: grid;
+}
+
+.menu {
+  background-color: #f6f6f6;
+}
+.menu .menuheader {
+  font-family: Shrikhand;
+  font-size: 1.5em;
+}
+
+.commanderbtn {
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: white;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  width: 300px;
 }
 
 /* stylemain*/
@@ -103,9 +146,13 @@ body {
   background-color: black;
   color: white;
 }
+.footer .footercontent {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
 .footer h3 {
   font-family: Shrikhand;
-  margin-left: 2em;
+  margin-left: 32px;
 }
 .footer ul {
   list-style: none;
