--- a/style.css
+++ b/style.css
@@ -26,9 +26,12 @@
 /* style main*/
 body {
   font-family: roboto;
+  margin: 0px;
 }
 
 .localisation {
+  font-weight: 600;
+  font-size: 1.3rem;
   text-align: center;
   background-color: #f3f3f3;
   padding: 0.75rem 1.5rem;
@@ -45,6 +48,7 @@ body {
 }
 .explore .exploretitle {
   text-align: center;
+  font-size: 1.8rem;
 }
 .explore .exploretext {
   text-align: center;
@@ -58,16 +62,22 @@ body {
   color: white;
   background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
   width: 300px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-.fonctionnementcarte {
+.fonctionnement .fonctionnementtitle {
+  margin-left: 32px;
+}
+.fonctionnement .fonctionnementcarte {
   background-color: #f6f6f6;
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   padding: 0.75rem 1.5rem;
   margin-bottom: 20px;
 }
-.fonctionnementcarte .fonctionnementtexte {
+.fonctionnement .fonctionnementtexte {
   margin-left: 32px;
 }
 
@@ -87,7 +97,13 @@ body {
      object-fit: cover;
 }
 
-.restaurant .restaurantitle {
+.restaurants {
+  padding-top: 45px;
+  padding-bottom: 25px;
+  background-color: #f6f6f6;
+}
+.restaurants .restaurantstitle {
+  margin-left: 32px;
   font-family: roboto;
 }
 
@@ -159,6 +175,4 @@ body {
 }
 .footer li {
   margin-bottom: 5px;
-}
-
-/* stylefooter*//*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
