--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -1,18 +1,35 @@
-/* Variables*/
-/* colors */
-/* colors */
-/* police */
-@font-face {
-  font-family: Shrikhand;
-  src: url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+/*Colors*/
+/* */
+/* */
+/* */
+/* */
+/* */
+.explorebutton {
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: white;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  width: 300px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
 }
-@font-face {
-  font-family: Roboto;
-  src: url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+
+.commanderbtn {
+  border-radius: 20px;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: white;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  width: 300px;
 }
-/* police */
-/* mixin */
-/* mixin */
+
 /* styleheader*/
 .header {
   text-align: center;
@@ -26,9 +43,12 @@
 /* style main*/
 body {
   font-family: roboto;
+  margin: 0px;
 }
 
 .localisation {
+  font-weight: 600;
+  font-size: 1.3rem;
   text-align: center;
   background-color: #f3f3f3;
   padding: 0.75rem 1.5rem;
@@ -40,34 +60,28 @@ body {
 .explore {
   display: flex;
   flex-direction: column;
-  background-color: #f6f6f6;
+  background-color: #fafafa;
   padding: 0.75rem 1.5rem;
 }
 .explore .exploretitle {
   text-align: center;
+  font-size: 1.8rem;
 }
 .explore .exploretext {
   text-align: center;
 }
-.explore .explorebutton {
-  border-radius: 20px;
-  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  color: white;
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  width: 300px;
-}
 
-.fonctionnementcarte {
-  background-color: #f6f6f6;
+.fonctionnement .fonctionnement--title {
+  margin-left: 32px;
+}
+.fonctionnement .fonctionnementcarte {
+  background-color: #fafafa;
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   padding: 0.75rem 1.5rem;
   margin-bottom: 20px;
 }
-.fonctionnementcarte .fonctionnementtexte {
+.fonctionnement .fonctionnementtexte {
   margin-left: 32px;
 }
 
@@ -87,7 +101,13 @@ body {
      object-fit: cover;
 }
 
-.restaurant .restaurantitle {
+.restaurants {
+  padding-top: 45px;
+  padding-bottom: 25px;
+  background-color: #fafafa;
+}
+.restaurants .restaurantstitle {
+  margin-left: 32px;
   font-family: roboto;
 }
 
@@ -122,22 +142,11 @@ body {
 }
 
 .menu {
-  background-color: #f6f6f6;
+  background-color: #fafafa;
 }
 .menu .menuheader {
   font-family: Shrikhand;
   font-size: 1.5em;
-}
-
-.commanderbtn {
-  border-radius: 20px;
-  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  color: white;
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  width: 300px;
 }
 
 /* stylemain*/
@@ -159,6 +168,4 @@ body {
 }
 .footer li {
   margin-bottom: 5px;
-}
-
-/* stylefooter*//*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
