mise en style background pages restaurants

--- a/layout/composants/_bouton.scss
+++ b/layout/composants/_bouton.scss
@@ -3,9 +3,13 @@
     @include buttonlayout();
     width: fit-content;
     margin: auto;
+    border: none;
 }
 
 .commanderbtn{
     @include cardradiusandshadow();
     @include buttonlayout();
+    width: fit-content;
+    margin: auto;
+    border: none;
 }
