--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -1,13 +1,23 @@
 @import "/Users/chips/Desktop/AntoineChirat_3_15062021/utils/_variables.scss";
 @import "/Users/chips/Desktop/AntoineChirat_3_15062021/utils/_mixin.scss";
 @import "/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/_bouton.scss";
+@import "/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/_icones.scss";
 
 /* styleheader*/
 .header{
+    display: flex;
     text-align: center;
+    i{
+    margin: auto;
+    padding-left: 15px;
+    }
 }
+
 .logo{
     font-family: Shrikhand;
+    font-size: 2.5em;
+    flex-basis: 100%;
+    margin: auto;
 }
 /* styleheader*/
 
@@ -15,6 +25,7 @@
 body{
     font-family: roboto;
     margin:0px;
+    width: 100%;
 }
 .localisation{
     font-weight: 600;
@@ -24,6 +35,7 @@ body{
     padding: .75rem 1.5rem;
     span{
         margin-left: 10px;
+        font-size: 0.8em;
     }
 }
 
@@ -38,11 +50,13 @@ body{
     }
     .exploretext{
         text-align: center;
+        font-weight: 100;
     }
     .explorebutton{
         @include cardradiusandshadow();
         @include buttonlayout();
         width: fit-content;
+        font-weight: 100;
     }
 }
 
@@ -70,7 +84,7 @@ body{
 
 .backgroundpicture{
     width: 100%;
-    max-height: 512px;
+    height: 320px;
     object-fit: cover;
 }
 
@@ -79,21 +93,40 @@ body{
     padding-bottom:25px;
     background-color: $background;
     .restaurantstitle{
-        margin-left: 32px;
+        margin-left: 15px;
         font-family:roboto ;
     }
 }
 
 .restaurantcartes{
-    height: 256px;
     @include cardradiusandshadow();
-    border: 4px solid black;
     margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
     transform:scale(1);
     transition-property: transform;
     transition-duration: 500ms;
+    .carte{
+        text-decoration:none;
+    }
     &:hover{
         transform: scale(1.03);
+    }
+    footer{
+        display: grid;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding: 10px;
+    }
+    h3{
+        margin: 0;
+    }
+    .restaurantquartier{
+        grid-column: 1;
+    }
+    .favorite{
+        grid-column: 2;
+        text-align: right;
     }
 }
 
@@ -105,15 +138,55 @@ body{
     @include cardradiusandshadow();
     background-color: white;
     display: grid;
+    padding:10px;
+    margin-bottom: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    .foodcardtitle{
+        margin:0;
+    }
+    .foodcarddescription{
+        grid-column: 1;
+        margin-bottom: 0;
+    }
+    .foodcardprice{
+        grid-column: 2;
+        text-align: right;
+        margin-bottom: 0;
+    }
 }
 
 .menu{
     background-color: $background;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
+    margin-top: -35px;
+    position: relative;
     .menuheader{
         font-family: Shrikhand;
         font-size: 1.5em;
     }
+    .menuheader{
+        display: flex;
+    }
+    .menutitle{
+        flex-basis: 70%;
+        font-size: 1.24em;
+        margin-left: 32px;
+    }
+    i{
+        margin: auto;
+    }
+}
 
+.foodtitle{
+    margin-left: 15px;
+}
+
+.commander{
+    display: flex;
+    margin-top: 30px;
+    padding-bottom: 30px;
 }
 
 /* stylemain*/
@@ -126,6 +199,11 @@ body{
         padding-top: 15px;
         padding-bottom: 15px;
     }
+    .footerlogo{
+        font-family: Shrikhand;
+        flex-basis: 100%;
+        margin-left: 32px;
+    }
     h3{
         font-family: Shrikhand;
         margin-left: 32px;
@@ -135,6 +213,9 @@ body{
     }
     li{
         margin-bottom: 5px;
+    }
+    i{
+        margin-right:10px;
     }
 }
 
