--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -36,6 +36,11 @@
   border: none;
 }
 
+@media (max-width: 1100px) {
+  .fonctionnementetapes {
+    flex-direction: column;
+  }
+}
 /* styleheader*/
 .header {
   display: flex;
@@ -87,23 +92,15 @@ body {
   text-align: center;
   font-weight: 100;
 }
-.explore .explorebutton {
-  border-radius: 20px;
-  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  color: white;
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  width: 300px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-weight: 100;
-}
 
+.fonctionnement {
+  margin-top: 30px;
+}
 .fonctionnement .fonctionnementtitle {
   margin-left: 32px;
+}
+.fonctionnement .fonctionnementetapes {
+  display: flex;
 }
 .fonctionnement .fonctionnementcarte {
   background-color: #fafafa;
@@ -111,6 +108,8 @@ body {
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   padding: 0.75rem 1.5rem;
   margin-bottom: 20px;
+  flex: 30%;
+  margin-right: 25px;
 }
 .fonctionnement .fonctionnementtexte {
   margin-left: 32px;
