--- a/layout/composants/_bouton.scss
+++ b/layout/composants/_bouton.scss
@@ -3,7 +3,9 @@
     @include buttonlayout();
     width: fit-content;
     margin: auto;
+    margin-bottom: 15px;
     border: none;
+    font-weight: 600;
 }
 
 .commanderbtn{
@@ -12,4 +14,5 @@
     width: fit-content;
     margin: auto;
     border: none;
+    font-weight: 600;
 }
