--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -117,30 +117,28 @@
   text-align: right;
 }
 
-/* Disposition grid page d'accueil version desktop*/
-.carte1 {
-  grid-column: 1;
-  grid-row: 1;
-}
 
-.carte2 {
-  grid-column: 2;
-  grid-row: 1;
-}
+@media (max-width: 767px) {
+  .fonctionnementetapes {
+    flex-direction: column;
+  }
 
-.carte3 {
-  grid-column: 1;
-  grid-row: 2;
-}
+  .footer {
+    padding: none;
+  }
 
-.carte4 {
-  grid-column: 2;
-  grid-row: 2;
+  .cartecontainer {
+    display: flex;
+    flex-direction: column;
+  }
 }
-
 @media (max-width: 1100px) {
   .fonctionnementetapes {
     flex-direction: column;
+  }
+
+  .footer {
+    padding: 0px;
   }
 }
 /* styleheader*/
@@ -198,8 +196,6 @@ body {
 
 .fonctionnement {
   margin-top: 30px;
-  padding-left: 170px;
-  padding-right: 170px;
 }
 .fonctionnement .fonctionnementtitle {
   margin-left: 32px;
@@ -231,8 +227,6 @@ body {
   padding-top: 45px;
   padding-bottom: 25px;
   background-color: #fafafa;
-  padding-left: 175px;
-  padding-right: 175px;
 }
 .restaurants .restaurantstitle {
   margin-left: 15px;
@@ -240,7 +234,8 @@ body {
   font-weight: 1000;
 }
 .restaurants .cartecontainer {
-  display: grid;
+  display: flex;
+  flex-direction: column;
 }
 
 .restaurantlegend {
@@ -258,8 +253,6 @@ body {
   border-top-left-radius: 35px;
   border-top-right-radius: 35px;
   margin-top: -60px;
-  margin-left: 175px;
-  margin-right: 175px;
   position: relative;
 }
 .menu .menuheader {
@@ -282,22 +275,16 @@ body {
 }
 .menu .menucontainer {
   display: flex;
+  flex-direction: column;
 }
 .menu .entrées {
   flex: 31%;
-  margin: auto;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 .menu .plats {
   flex: 32%;
-  margin: auto;
 }
 .menu .dessert {
   flex: 31%;
-  margin: auto;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
 .foodtitle {
@@ -315,7 +302,6 @@ body {
 .footer {
   background-color: #353535;
   color: white;
-  padding-left: 150px;
 }
 .footer .footercontent {
   padding-top: 15px;
