--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -3,7 +3,6 @@
 @import "/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/_bouton.scss";
 @import "/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/_icones.scss";
 @import "/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/_cartes.scss";
-@import "/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/_mobileandtablet.scss";
 
 /* styleheader*/
 .header{
@@ -30,6 +29,7 @@ body{
     margin:0px;
     width: 100%;
 }
+
 .localisation{
     font-weight: 600;
     font-size: 1.3rem;
@@ -59,16 +59,16 @@ body{
 
 .fonctionnement{
     margin-top:30px;
+    display: flex;
+    flex-direction: column;
+    }
     .fonctionnementtitle{
         margin-left: 32px;
     }
-    .fonctionnementetapes{
-        display: flex;
-    }
     .fonctionnementtexte{
-            margin-left: 32px;
+        margin-left: 32px;
     }
-}
+
 
 .carteimage{
     @include photoradius();
@@ -96,7 +96,6 @@ body{
     }
 }
 
-
 .restaurantlegend{
     @include nouveauattribute();
 }
@@ -105,9 +104,6 @@ body{
     background-color: $background;
     border-top-left-radius: 35px;
     border-top-right-radius: 35px;
-    margin-top: -60px;
-    margin-left: 175px;
-    margin-right: 175px;
     position: relative;
     .menuheader{
         font-family: Shrikhand;
@@ -128,23 +124,17 @@ body{
         margin: auto;
     }
     .menucontainer{
-        display: flex;
+        display: block;
+        
     }
         .entrées{
             flex: 31%;
-            margin: auto;
-            margin-left: 15px;
-            margin-right: 15px;
         }
         .plats{
             flex: 32%;
-            margin: auto;
         }
         .dessert{
             flex: 31%;
-            margin: auto;
-            margin-left: 15px;
-            margin-right: 15px;
         }
         
 }
@@ -193,3 +183,58 @@ body{
     }
 }
 
+@media all and (min-width: 950px) {
+    .restaurants{
+        margin-left: 175px;
+        margin-right: 175px;
+    }
+    .restaurants .restaurantstitle{
+        margin-left:55px;
+    }
+
+    .menu{
+        margin-left: 175px;
+        margin-right: 175px;
+    }
+
+    .menu .menucontainer{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .cartecontainer{
+        display: grid;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    .carte1{
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .carte2{
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    .carte3{
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .carte4{
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .fonctionnement{
+      margin-left: 175px;
+      margin-right: 175px;
+    }
+    .fonctionnementetapes {
+      display: flex;
+      flex-direction: row;
+  
+    }
+  }
