meilleure syntaxe avec fichier vue desktop en importation

--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -1,3 +1,4 @@
+/* style carte*/
 .fonctionnementcarte{
     background-color: $background;
     @include cardradiusandshadow();
@@ -71,4 +72,5 @@
         text-align: right;
     }
 }
-/* Disposition grid page d'accueil version desktop*/
+/* style carte*/
+
