--- a/layout/composants/_bouton.scss
+++ b/layout/composants/_bouton.scss
@@ -1,3 +1,4 @@
+/*style boutons*/
 .explorebutton{
     @include cardradiusandshadow();
     @include buttonlayout();
@@ -16,3 +17,4 @@
     border: none;
     font-weight: 600;
 }
+/*style boutons*/
