--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -12,7 +12,7 @@
     padding-bottom:15px;
     i{
     margin: auto;
-    padding-left: 40px;
+    padding-left: 15px;
     }
 }
 
@@ -20,7 +20,13 @@
     font-family: Shrikhand;
     flex-basis: 100%;
     margin: auto;
+    margin-right: 20px;
 }
+
+.logoindex{
+    margin-right: -7px;
+}
+
 /* styleheader*/
 
 /* style main*/
