--- a/layout/composants/_desktopview.scss
+++ b/layout/composants/_desktopview.scss
@@ -1,8 +1,7 @@
+
 /*version desktop*/
 @media all and (min-width: 950px) {
-    .restaurants{
-        @include margindesktop;
-    }
+
     .restaurants .restaurantstitle{
         margin-left:55px;
     }
@@ -30,26 +29,32 @@
     .carte1{
         grid-column: 1;
         grid-row: 1;
+        min-width: 500px;
+        max-width: 500px;
     }
 
     .carte2{
         grid-column: 2;
         grid-row: 1;
+        min-width: 500px;
+        max-width: 500px;
     }
 
     .carte3{
         grid-column: 1;
         grid-row: 2;
+        min-width: 500px;
+        max-width: 500px;
     }
 
     .carte4{
         grid-column: 2;
         grid-row: 2;
+        min-width: 500px;
+        max-width: 500px;
     }
 
-    .fonctionnement{
-        @include margindesktop;
-    }
+
     .fonctionnementetapes {
         display: flex;
         flex-direction: row;
